Fix spacing on storage settings

--- a/assets/scss/partials/StorageSettings.scss
+++ b/assets/scss/partials/StorageSettings.scss
@@ -5,7 +5,7 @@
 .StorageSettings {
     position: relative;
     max-width: 850px;
-    margin: 2rem auto 1rem;
+    margin: 2rem auto 0rem;
     background-color: white;
     height: auto;
     padding: 14px;
